<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="click"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".notifications.NotificationActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simple_notification"
            style="@style/blueButton"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="@{click::onClick}"
            android:text="@string/simple_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_group_notification"
            style="@style/blueButton"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="@{click::onClick}"
            android:text="@string/group_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_simple_notification"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_progress_notification"
            style="@style/blueButton"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="@{click::onClick}"
            android:text="@string/progressbar_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_group_notification"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>