<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.shieldpay.webservices.http.AuthenticationViewModel" />

        <variable
            name="click"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/scrollview"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signin.SigninActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/baselayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:fitsSystemWindows="true"
                app:cardBackgroundColor="@color/dot_selected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/shieldpay"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_marginStart="-35dp"
                        android:src="@drawable/left_side"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_170sdp"
                        android:layout_height="@dimen/_170sdp"
                        android:layout_marginEnd="-28dp"
                        android:src="@drawable/right_side"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_greet_msg"
                style="@style/headingLabel"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/welcomeback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                style="@style/label"
                android:text="@string/email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_greet_msg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_email"
                style="@style/editTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/eve_holt_reqres_in"
                    android:id="@+id/edtEmailAddress"
                    style="@style/editText"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                style="@style/label"
                android:text="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password"
                style="@style/editTextInputLayout"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/edt_email"
                app:layout_constraintStart_toStartOf="@id/edt_email"
                app:layout_constraintTop_toBottomOf="@id/tv_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pass"
                    android:text="@string/cityslicka"
                    style="@style/editText"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_pass"
                style="@style/label"
                android:text="@string/forgot_password"
                android:onClick="@{click.onClick}"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signin"
                style="@style/blueButton"
                android:onClick="@{click.onClick}"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass"
                app:layout_constraintWidth_percent="0.9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dot_selected"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toTopOf="@id/progress_circular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signin" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_account"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>