<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".forgotpassword.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baselayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_greet_msg"
            style="@style/headingLabel"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/forgot_passwordOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_forgot_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_greet_msg"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/forgot_password_info"
            android:textAlignment="center"
            android:textColor="@color/forgot_color"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_forgot_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            style="@style/label"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            style="@style/editTextInputLayout"
            app:layout_constraintEnd_toEndOf="@id/tv_info"
            app:layout_constraintStart_toStartOf="@id/tv_info"
            app:layout_constraintTop_toBottomOf="@id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailAddress"
                style="@style/editText"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="@style/blueButton"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/send_verification_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
